<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_movie_details_review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/sample_review"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:id="@+id/tv_movie_details_review_author_hyphen"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/tv_movie_details_review_content"
        android:layout_toLeftOf="@id/tv_movie_details_review_author"
        android:gravity="center"
        android:text="@string/sample_review_author_hyphen" />

    <TextView
        android:id="@+id/tv_movie_details_review_author"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/tv_movie_details_review_content"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="@string/sample_review_author"
        android:textAppearance="?android:textAppearanceSmall" />

</RelativeLayout>