<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_movie_details_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/sample_backdrop_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_backdrop" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/sample_title"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_movie_details_poster"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/sample_poster_content_description"
                        android:src="@drawable/sample_poster" />

                    <TextView
                        android:id="@+id/tv_movie_details_release_date_label"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/iv_movie_details_poster"
                        android:layout_toRightOf="@id/iv_movie_details_poster"
                        android:gravity="end"
                        android:paddingBottom="8dp"
                        android:paddingTop="24dp"
                        android:text="@string/tv_movie_details_release_date_label"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/tv_movie_details_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/tv_movie_details_release_date_label"
                        android:layout_toRightOf="@id/tv_movie_details_release_date_label"
                        android:gravity="start"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:paddingTop="24dp"
                        android:text="@string/sample_release_date"
                        android:textAppearance="?android:textAppearanceSmall"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tv_movie_details_vote_average_label"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie_details_release_date_label"
                        android:layout_toEndOf="@id/iv_movie_details_poster"
                        android:layout_toRightOf="@id/iv_movie_details_poster"
                        android:gravity="end"
                        android:text="@string/tv_movie_details_vote_average_label"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/tv_movie_details_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie_details_release_date"
                        android:layout_toEndOf="@id/tv_movie_details_vote_average_label"
                        android:layout_toRightOf="@id/tv_movie_details_vote_average_label"
                        android:gravity="start"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/sample_vote_average"
                        android:textAppearance="?android:textAppearanceSmall"
                        tools:ignore="RtlSymmetry" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_movie_details_overview_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_label"
                    android:textAlignment="center"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_movie_details_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/sample_overview"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
